--- a/survey/core/templates/core/project_confirm_delete.html
+++ b/survey/core/templates/core/project_confirm_delete.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
 <form action="" method="post">{% csrf_token %}
     Are you sure you want to delete {{ projects }}
     <input type="submit">
 </form>
-</body>
-</html>
+{% endblock content %}
