owl carsol removed and requirements.txt update

--- a/survey/static/css/vendor.css
+++ b/survey/static/css/vendor.css
@@ -4,7 +4,7 @@
 @import url("../bower_components/animate.css/animate.css");
 @import url("../vendor/pnotify/pnotify.custom.min.css");
 @import url("../vendor/vue-multiselect/vue-multiselect.min.css");
-@import url("../bower_components/owl.carousel/dist/assets/owl.carousel.min.css");
+/*@import url("../bower_components/owl.carousel/dist/assets/owl.carousel.min.css");*/
 @import url("~fullcalendar/dist/fullcalendar.css");
 /*
 @import url("../bower_components/bootstrap-daterangepicker/daterangepicker-bs3.css");
