--- a/survey/core/templates/core/dashboard.html
+++ b/survey/core/templates/core/dashboard.html
@@ -13,10 +13,10 @@
 
 {% endfor %}
 
-<p>
+<br>
 
     <a href="{% url 'core:project_create' %}">Add Project</a><br>
-    <a href="{% url 'core:user_create' %}">Create User</a>
+    <a href="{% url 'core:user_create' %}">Create User</a></br>
 
 </p>
 {% endblock content %}
