--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -3,6 +3,7 @@
 {% block content %}
 {% for project in project %}
 <h3>{{ project }}</h3>   <a href="{% url 'core:project_update' project.pk %}">Edit</a><br>
+<h4>Sites:</h4>
     {% for site in project.sites.all %}
         {{ site }}
     <a href="{% url 'core:site_update' site.pk %}">Update Site</a>
