--- a/survey/core/templates/core/project_detail.html
+++ b/survey/core/templates/core/project_detail.html
@@ -8,7 +8,7 @@ Project Manager: {% for manager in projects.project_roles.all %} {{ manager.user
 <h4>Sites:</h4>
 <p>
     {% for site in projects.sites.all  %}
-    {{ site }}--<a href="{% url 'core:site_update' site.pk %}">Update Site</a>
+    <a href="{% url 'core:site_detail' site.pk %}">{{ site }}</a>--<a href="{% url 'core:site_update' site.pk %}">Update Site</a>
 
     <form action="{% url 'core:site_delete' site.pk %}" method="post">{% csrf_token %}
         <input type="submit" value="Delete {{site}}" />
