--- a/survey/core/templates/core/project_form.html
+++ b/survey/core/templates/core/project_form.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form action="" method="post">{% csrf_token %}
+<form action="{% url 'core:project_create' %}" method="post">{% csrf_token %}
     {{ form.as_p }}
-    <input type="submit">
+    <input type="submit" value="Submit">
 </form>
 {% endblock content %}
