--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -3,8 +3,13 @@
 {% block content %}
 <h3>{{object}}</h3>
 <h4>Under Project: {{object.project}}</h4>
+<h4>Type: {{object.type}}</h4>
+<h4>Photo: {{object.photo}}</h4>
+<h4>Address: {{object.address}}</h4>
+<h4>Latitude: {{object.latitude}}</h4>
+<h4>Longitude: {{object.longitude}}</h4>
+<h4>Contact Number: {{object.contact_number}}</h4>
 <p>
-
     <a href="{% url 'core:project_create' %}">Add Project</a><br>
     <a href="{% url 'core:user_create' %}">Create User</a>
 
