--- a/survey/core/templates/core/site_steps.html
+++ b/survey/core/templates/core/site_steps.html
@@ -4,11 +4,8 @@
 
 {% block content %}
 <h3>Site Steps</h3>
-<h4>{{data}}</h4>
 <p>
-
-    <a href="{% url 'core:site_detail' pk %}">Site Detail</a><br>
-
+    <a href="{% url 'core:site_detail' is_project pk %}"> Detail</a><br>
 </p>
 
 <div id="app"></div>
@@ -17,5 +14,11 @@
 {% endblock content %}
 
 {% block extra_script %}
+<script>
+    var template_data = template_data ||  {};
+    template_data.is_project={{is_project}};
+    template_data.pk={{pk}};
+
+</script>
 {% render_bundle 'steps' 'js' %}
 {% endblock extra_script %}
