--- a/survey/core/templates/core/project_form.html
+++ b/survey/core/templates/core/project_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form action="{% url 'core:project_create' %}" method="post">{% csrf_token %}
+<form method="post">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Submit">
 </form>
