save step with checklist project

--- a/survey/core/templates/core/site_steps.html
+++ b/survey/core/templates/core/site_steps.html
@@ -3,6 +3,7 @@
 {% load get_files from webpack_loader %}
 
 {% block content %}
+{% csrf_token %}
 <h3> Steps</h3>
 <p>
     {% if is_project == "0" %}
