--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -10,6 +10,7 @@
 <h4>Longitude: {{object.longitude}}</h4>
 <h4>Contact Number: {{object.contact_number}}</h4>
 <p>
+    <a href="url 'core:site_steps">Site Steps</a><br/>
     <a href="{% url 'core:project_create' %}">Add Project</a><br>
     <a href="{% url 'core:user_create' %}">Create User</a>
 
