--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -12,7 +12,7 @@
                 <input type="submit" value="Delete {{ site }}"/>
             </form><br>
         {% endfor %}
-        <h4>Category</h4>
+        <h4>Category:</h4>
     {% for category in project.category.all %}
         {{ category }}<a href="{% url 'core:category_update' category.pk %}"> Update</a>
         <a href="{% url 'core:category_delete' category.pk %}">Delete</a><br>
