--- a/survey/core/templates/core/site_steps.html
+++ b/survey/core/templates/core/site_steps.html
@@ -20,6 +20,7 @@
     var template_data = template_data ||  {};
     template_data.is_project={{is_project}};
     template_data.pk={{pk}};
+    template_data.project={{project}};
 
 </script>
 {% render_bundle 'steps' 'js' %}
