--- a/survey/templates/_base.html
+++ b/survey/templates/_base.html
@@ -109,50 +109,147 @@
 </header>
 <div id="main-container" class="minified">
  {% block content %}
+	<div class="row no-gutters">
+            <div class="col-md-4 col-lg-3">
+                <div class="module-school-list">
+                    <div class="school-wrap">
+                        <ul class="school-list">
+                            <li>
+                                <a href="#" title="">
+                                    <img src="assets/img/img-school.png" class="school-logo" alt="">
+                                    <h6>Harvard University</h6>
+                                    <span>Cambridge, Massachusetts</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" title="">
+                                    <img src="assets/img/img-school.png" class="school-logo" alt="">
+                                    <h6>Harvard University</h6>
+                                    <span>Cambridge, Massachusetts</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" title="">
+                                    <img src="assets/img/img-school.png" class="school-logo" alt="">
+                                    <h6>Harvard University</h6>
+                                    <span>Cambridge, Massachusetts</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" title="">
+                                    <img src="assets/img/img-school.png" class="school-logo" alt="">
+                                    <h6>Harvard University</h6>
+                                    <span>Cambridge, Massachusetts</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" title="">
+                                    <img src="assets/img/img-school.png" class="school-logo" alt="">
+                                    <h6>Harvard University</h6>
+                                    <span>Cambridge, Massachusetts</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" title="">
+                                    <img src="assets/img/img-school.png" class="school-logo" alt="">
+                                    <h6>Harvard University</h6>
+                                    <span>Cambridge, Massachusetts</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" title="">
+                                    <img src="assets/img/img-school.png" class="school-logo" alt="">
+                                    <h6>Harvard University</h6>
+                                    <span>Cambridge, Massachusetts</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" title="">
+                                    <img src="assets/img/img-school.png" class="school-logo" alt="">
+                                    <h6>Harvard University</h6>
+                                    <span>Cambridge, Massachusetts</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" title="">
+                                    <img src="assets/img/img-school.png" class="school-logo" alt="">
+                                    <h6>Harvard University</h6>
+                                    <span>Cambridge, Massachusetts</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" title="">
+                                    <img src="assets/img/img-school.png" class="school-logo" alt="">
+                                    <h6>Harvard University</h6>
+                                    <span>Cambridge, Massachusetts</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" title="">
+                                    <img src="assets/img/img-school.png" class="school-logo" alt="">
+                                    <h6>Harvard University</h6>
+                                    <span>Cambridge, Massachusetts</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-8 col-lg-9">
+                <div class="dash-right">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="widget-info margin-top-large">
+                                <div class="widget-head">
+                                    <h4><a href="#" title="">Widget</a></h4>
+                                    <a href="#" title="" class="btn btn-sm btn-xs btn-primary" target="_blank"><i class="la la-plus"></i> Add New</a>
+                                </div>
+                                <div class="widget-body">
+                                     <p>
+                                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="widget-info margin-top-large">
+                                <div class="widget-head">
+                                    <h4><a href="#" title="">Widget</a></h4>
+                                    <a href="#" title="" class="btn btn-sm btn-xs btn-primary" target="_blank"><i class="la la-plus"></i> Add New</a>
+                                </div>
+                                <div class="widget-body">
+                                     <p>
+                                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12">
+                            <div class="widget-info margin-top-large">
+                                <div class="widget-head">
+                                    <h4><a href="#" title="">Widget</a></h4>
+                                    <a href="#" title="" class="btn btn-sm btn-xs btn-primary" target="_blank"><i class="la la-plus"></i> Add New</a>
+                                </div>
+                                <div class="widget-body">
+                                     <p>
+                                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
  {% endblock content %}
 
-    {% render_bundle 'main' 'js' %}
-
+</div>
+<script>
+    var template_data = template_data ||  {};
+</script>
+{% render_bundle 'main' 'js' %}
 {% block extra_script %}
 {% endblock extra_script %}
-
-</div>
-        <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-3.2.1.min.js"><\/script>')</script>-->
-        <!--<script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-1.11.2.min.js"><\/script>')</script>-->
-        <script>
-        	$(document).ready(function(){
-        	console.log("hello");
-                //Height Fix
-                schoolWrapHeightFix();
-                window.onresize = function(event) {
-                    schoolWrapHeightFix();
-                }
-
-                function schoolWrapHeightFix() {
-                    vph = $(window).height();
-                    if($(document).width() > 479) {
-                        vph = vph - ($("#header").height() + 16);
-                        $(".school-wrap").height(vph);
-                    }else{
-                        vph = ( vph / 1.5 ) - ($("#header").height() + 16);
-                        $(".school-wrap").height(vph);
-                    }
-                }
-                //Make it scroll
-        		if ($.fn.niceScroll) {
-        		console.log("scroll");
-                    $(".school-wrap").niceScroll({
-                        cursorcolor: "#FFF",
-                        cursorborderradius: "0px",
-                        cursorborder:"",
-                        cursorwidth: "8px"
-                    });
-                }
-        	});
-
-
-        </script>
-
-    </body>
+</body>
 </html>
