--- a/survey/static/css/asset.css
+++ b/survey/static/css/asset.css
@@ -1,7 +1,8 @@
-@import url("../bower_components/bootstrap/dist/css/bootstrap.css");
+/*@import url("../bower_components/bootstrap/dist/css/bootstrap.css");
 @import url("../bower_components/font-awesome/css/font-awesome.min.css");
 @import url("../vendor/pace/pace.css");
 @import url("../bower_components/animate.css/animate.css");
+*/
 @import url("../vendor/pnotify/pnotify.custom.min.css");
 @import url("../vendor/vue-multiselect/vue-multiselect.min.css");
 @import url("~fullcalendar/dist/fullcalendar.css");
